--- a/.github/workflows/changelog.yaml
+++ b/.github/workflows/changelog.yaml
@@ -13,9 +13,11 @@ jobs:
       - name: Configure git info
         run:  cd "${GITHUB_WORKSPACE}" && git config --global user.email "support@weave.works" && git config --global user.name "support"
       - name: genlog
+        env:
+          - CHANGELOG_GITHUB_TOKEN: "${{ secrets.CHANGELOG_CREATION_TOKEN }}"
         run: docker run --rm -v "${GITHUB_WORKSPACE}":"/usr/local/src/your-app" ferrarimarco/github-changelog-generator -u weaveworks -p weave-gitops
       - name: savelog
         env:
-          CHANGELOG_SECRET: "${{ secrets.CHANGELOG_CREATION_TOKEN }}"
-        run: GITHUB_ACCESS_TOKEN="${CHANGELOG_SECRET}" cd "${GITHUB_WORKSPACE}" && git add CHANGELOG.md && git commit -m'Add changelog' && git push HEAD:master HEAD:master
+          - CHANGELOG_GITHUB_TOKEN: "${{ secrets.CHANGELOG_CREATION_TOKEN }}"
+        run: GITHUB_ACCESS_TOKEN="${CHANGELOG_GITHUB_TOKEN}" cd "${GITHUB_WORKSPACE}" && git add CHANGELOG.md && git commit -m'Add changelog' && git push HEAD:master HEAD:master
 
