--- a/.github/workflows/changelog.yaml
+++ b/.github/workflows/changelog.yaml
@@ -16,8 +16,17 @@ jobs:
         env:
           CHANGELOG_GITHUB_TOKEN: "${{ secrets.CHANGELOG_CREATION_TOKEN }}"
         run: docker run --rm -v "${GITHUB_WORKSPACE}":"/usr/local/src/your-app" ferrarimarco/github-changelog-generator -u weaveworks -p weave-gitops
-      - name: savelog
+      - name: check-in
         env:
           CHANGELOG_GITHUB_TOKEN: "${{ secrets.CHANGELOG_CREATION_TOKEN }}"
-        run: GITHUB_ACCESS_TOKEN="${CHANGELOG_GITHUB_TOKEN}" cd "${GITHUB_WORKSPACE}" && git add CHANGELOG.md && git commit -m'Add changelog' && git push HEAD:master HEAD:master
+        run: GITHUB_ACCESS_TOKEN="${CHANGELOG_GITHUB_TOKEN}" cd "${GITHUB_WORKSPACE}" && git add CHANGELOG.md && git commit -m'Add changelog'
+
+  push-changelog:
+      - name: savelog
+        uses: elstudio/actions-js-build/commit@v2
+        with:
+          pushBranch: master
+          commitMessage: Add changelog
+        env:
+          GITHUB_TOKEN: "${{ secrets.CHANGELOG_CREATION_TOKEN }}"
 
