--- a/.github/workflows/changelog.yaml
+++ b/.github/workflows/changelog.yaml
@@ -22,6 +22,8 @@ jobs:
         run: GITHUB_ACCESS_TOKEN="${CHANGELOG_GITHUB_TOKEN}" cd "${GITHUB_WORKSPACE}" && git add CHANGELOG.md && git commit -m'Add changelog'
 
   push-changelog:
+    runs-on: ubuntu-20.04
+    steps:
       - name: savelog
         uses: elstudio/actions-js-build/commit@v2
         with:
